assets/css/style.css
.screenRuler {
	width: 100%;
  	max-width: 960px;
  	margin: 0 auto;
  	clear: both;
}
* {
  	box-sizing: border-box;
}

body {
	color:#777;
	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
	background-image: url('../images/back.png');
	font-size:18px;	
}
.topBar{
	position:fixed;
	z-index: 99;
	width:100%;
	overflow: auto;
	background-color: #fff;
	color:#fff;
	border-bottom: 2px solid #ccc;
}
.topBox {
	background-color:#4aaaa5 ;
	width:300px;
	height:90px;
	float:left;
	font-family: Georgia, Times, "Times New Roman", serif;
  	font-size: 30px;
  	color:#fff;
  	text-align: center;
  	text-decoration: none;
  	font-weight: bolder;
  	line-height: 90px;
}
nav {
	margin-top: 30px;
	float:right;
}
nav a:link{
	color:#A7B8C9;
	display: inline-block;
	text-decoration: none;
}
nav a:visited{
	color:#A7B8C9;
	text-decoration: none;
}
nav a:hover {
	color:black;
	text-decoration: underline;
}
nav a:active {
	color:green;
	text-decoration: underline;
}
.portLink {
	border-right: 2px solid lightgrey;
	border-left: 2px solid lightgrey;
	padding-left: 10px;
	padding-right: 10px;
	margin-right: 10px;
	margin-left: 10px;
}
.content {	
	padding: 30px;
  	margin: 125px 0 40px;
	background-color: #fff;
	border:1px solid #ddd;
	width:100%;
	max-width:650px;
	float:left;
}
h2{
	font-family:'Georgia', Times, Times New Roman, serif;
	font-size: 30px;
	color:#4AAAA5;
	font-weight: bold;
}
h3{
	font-family:'Georgia', Times, Times New Roman, serif;
	font-size: 24px;
	color:#4AAAA5;
	font-weight: bold;
	white-space: nowrap;
}

.mainText {
	margin:0 10px 10px 10px;
}
.mainImage {
	float:left;
	height: auto;
	width: 200px;
	margin: 20px 20px 0 0;
}
.sideBar {
	background-color: #fff;
	border:1px solid #ddd;
	width:100%;
	max-width:270px;
	float:right;
	color:#4aaaa5;
	margin: 125px 0 0 0;
	padding: 30px;
 
}
.sideBarImage{
	height:auto;
	width:54px;
	padding: 6px;
}
.centerIcon {
	margin-left: 20px;
}
footer {
	clear:both;
	font-size: 12px;
	background-color: #666;
	border-top: 8px solid #4aaaa5;
	color:#fff;
	min-height: 85px;
	text-align: center;
	line-height: 83px;
}
.moveRight {
	margin-left: 174px;
    margin-top: 25px;
}
.moveRight p {
	margin:5px 0 5px 0;
}
.titleBox {
	background-color:#4aaaa5;
	width:200px;
	height:50px;
	position: relative;
	top:87px;
	padding-right: 5px;
}
/*Portfolio*/
#boxSet {
	margin-top: 25px;
}
.box {
	width: 200px;
	height: 150px;
	background-color: black;	 
}
.box p {
	color:white;
	font-size: 18px;

}
#hang {
	float: left;
	margin-left: 47px;
    margin-right: 15px;
    margin-bottom: 45px;
    background-image:url('../images/place1.jpg');
}
#rpg {
	float:left;
	background-image:url('../images/place2.jpg');

}
#trivia {
	clear:both;
	float:left;
	margin-left: 47px;
    margin-right: 15px;
    margin-bottom: 45px;
    background-image:url('../images/place3.jpg');
}
#rutgers {
	float:left;
	background-image:url('../images/place4.jpg');
}
#rock {
	clear:both;
	float:left;
	margin-left: 47px;
    margin-right: 15px;
    margin-bottom: 45px;
    background-image:url('../images/place5.jpg');
}
.smallTitle {
	padding:12px 40px 0 55px;
}
.fatTitle {
	padding:15px 40px 0 20px;
	white-space: nowrap;
}

/*This Section will contain my media queries
which will control the responsiveness of the page*/

@media screen and (max-width: 980px) and (min-width: 769px) {
.screenRuler {
	max-width: 750px;
}
.content {
	max-width: 425px;
}
.mainText {
	clear:both;
}
.mainImage {
	width:350px;
}
/*Contact*/
.moveRight {
	margin-left: 47px;
}
#hang {
		clear:both;
		float: left;
		margin-left: 84px;
		margin-bottom: 45px;
}
#rpg {
		clear:both;
		float: left;
		margin-left: 84px;
		margin-bottom: 45px;
}
#trivia {
		clear:both;
		float: left;
		margin-left: 84px;
		margin-bottom: 45px;
}
#rutgers {
		clear:both;
		float: left;
		margin-left: 84px;
		margin-bottom: 45px;
}
#rock {
		clear:both;
		float: left;
		margin-left: 84px;
		margin-bottom: 45px;
}
}


	
	
	
@media screen and (max-width: 768px) {
.screenRuler{
	max-width: 625px;
}
.content {
	max-width: 600px;
}
.mainText {
	clear:none;
}
.sideBar{
	clear:none;
	float:left;
	margin-top: 0;
	max-width: 600px;
	margin-bottom: 25px;
}
.moveRight {
	margin-left: 131px;
}
#hang {
	margin-left: 46px;
	margin-right: 25px;
}
#trivia {
	margin-left: 46px;
	margin-right: 25px;
}
#rock {
	margin-left: 46px;
	margin-right: 25px;
}	
}


@media screen and (max-width: 640px) {
.screenRuler {
	max-width: 640px;
}
nav {
	clear:both;
	float:none;
	text-align: center;
	padding: 20px;
}
.topBox {
	width:100%;
	max-width: 640px;
	padding:0;
}
.content {
	margin-top: 190px;
	margin-left: 22px;

}
.sideBar {
	margin-left: 22px;
}
.mainText{
	clear:both;
}
.mainImage {
	width:250px;
	margin-left: 132px;
}
.mainText {
	padding-top:10px;
}
#hang {
		clear:both;
		float: left;
		margin-left: 161px;
		margin-bottom: 45px;
}
#rpg {
		clear:both;
		float: left;
		margin-left: 161px;
		margin-bottom: 45px;
}
#trivia {
		clear:both;
		float: left;
		margin-left: 161px;
		margin-bottom: 45px;
}
#rutgers {
		clear:both;
		float: left;
		margin-left: 161px;
		margin-bottom: 45px;
}
#rock {
		clear:both;
		float: left;
		margin-left: 161px;
		margin-bottom: 45px;
}
}

